--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 Find your train guy!
-  p Select your train below to see its current schedule.
+  h2 Select your train below to see its current schedule.
   #wrapper
     #trainList
       h2 Trains
